modified:   njumarket-front-admin/my-vue3-app/src/utils/userReview.js 	modified:   njumarket-front-admin/my-vue3-app/src/views/UserEdit.vue 	modified:   njumarket-front-admin/my-vue3-app/src/views/Users.vue 	modified:   njumarket-front/NJUMarket/src/api/index.js 	modified:   njumarket-front/NJUMarket/src/components/address/AddressForm.vue 	modified:   njumarket-front/NJUMarket/src/components/address/AddressManager.vue 	modified:   njumarket-front/NJUMarket/src/components/address/AddressSelector.vue 	modified:   njumarket-front/NJUMarket/src/components/commodity/BrowseCommodityCard.vue 	modified:   njumarket-front/NJUMarket/src/components/commodity/CommodityCard.vue 	modified:   njumarket-front/NJUMarket/src/components/commodity/CommodityGrid.vue 	modified:   njumarket-front/NJUMarket/src/components/commodity/MyCommodityCard.vue 	modified:   njumarket-front/NJUMarket/src/components/common/Pagination.vue 	modified:   njumarket-front/NJUMarket/src/components/layout/AppHeader.vue 	modified:   njumarket-front/NJUMarket/src/components/messages/ChatWindow.vue 	modified:   njumarket-front/NJUMarket/src/components/messages/CommodityCard.vue 	modified:   njumarket-front/NJUMarket/src/components/messages/ConversationList.vue 	new file:   njumarket-front/NJUMarket/src/components/messages/MessageCommodityCard.vue 	new file:   njumarket-front/NJUMarket/src/components/messages/MessageOrderCard.vue 	modified:   njumarket-front/NJUMarket/src/components/messages/OrderCard.vue 	modified:   njumarket-front/NJUMarket/src/components/messages/SelectCommodityOrOrderDialog.vue 	modified:   njumarket-front/NJUMarket/src/components/order/OrderCard.vue 	modified:   njumarket-front/NJUMarket/src/components/search/SearchBox.vue 	modified:   njumarket-front/NJUMarket/src/stores/commodity.js 	modified:   njumarket-front/NJUMarket/src/stores/message.js 	modified:   njumarket-front/NJUMarket/src/stores/order.js 	modified:   njumarket-front/NJUMarket/src/utils/userUtils.js 	modified:   njumarket-fron